--- a/config/database.yml
+++ b/config/database.yml
@@ -6,7 +6,7 @@
 # And be sure to use new-style password hashing:
 #   http://dev.mysql.com/doc/refman/5.0/en/old-client.html
 development:
-  adapter: mysql
+  adapter: mysql2
   database: talks2_development
   username: root
   password:
