--- a/config/database.yml
+++ b/config/database.yml
@@ -21,10 +21,11 @@ development:
 # re-generated from your development database when you run 'rake'.
 # Do not set this db to the same as development or production.
 test:
-  adapter: mysql
+  adapter: mysql2
   database: talks2_testing
-  username: talks
-  password: secret
+  username: root
+  password:
+
 
 production:
   host: DBHOST
